<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeFragment">

...
        android:src="@drawable/ic_baseline_sort_24"
        app:layout_constraintBottom_toBottomOf="@+id/topic"
        app:layout_constraintEnd_toEndOf="@+id/recycler"
        app:layout_constraintTop_toTopOf="@+id/topic" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/careBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_grass_24"
...
